--- a/myApp/templates/register.html
+++ b/myApp/templates/register.html
@@ -19,15 +19,38 @@
 		<div class="form-group">
 			{{render_field(form.confirm,class_="form-control")}}
 		</div>
-		<div class="form-group">
-		<p>PREFERENCES</p>
-		<input type="checkbox" name="sp">Sports<br>
-		<input type="checkbox" name="en">Entetainment<br>
-		<input type="checkbox" name="ge">General<br>
-		<input type="checkbox" name="bu">Business<br>
-		<input type="checkbox" name="he">Health<br>
-		<input type="checkbox" name="sc">Science<br>
-		<input type="checkbox" name="te">Technology<br></div>
+	
+		<div class="form-group"><p>PREFERENCES</p></div>
+			<p>
+      <label>
+        <input type="checkbox" class="filled-in" name="sp" />
+        <span>Sports</span>
+      </label>
+    </p>
+    	<p>
+      <label>
+        <input type="checkbox" class="filled-in" name="en"/>
+        <span>Entertainment</span>
+      </label>
+    </p>
+    	<p>
+      <label>
+        <input type="checkbox" class="filled-in" name="ge"/>
+        <span>General</span>
+      </label>
+    </p>
+    	<p>
+      <label>
+        <input type="checkbox" class="filled-in" name="sc"/>
+        <span>Science</span>
+      </label>
+    </p>
+    	<p>
+      <label>
+        <input type="checkbox" class="filled-in" name="te"/>
+        <span>Technology</span>
+      </label>
+    </p>
 		<p><input type="submit" class="btn btn-primary" value="Submit"></p>
 	</form>
 {% endblock %}
