--- a/myApp/templates/includes/_navbar_user.html
+++ b/myApp/templates/includes/_navbar_user.html
@@ -1,29 +1,65 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">{{name}}</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+  <a class="navbar-brand" href="#">{{name}}</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="/user_home">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="/logout">Sign Out</a>
-          </li>
-           <li class="nav-item">
-            <div class="dropdown ">
-            <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown">Profile</button>
-            <div class="dropdown-menu">
-      <a class="dropdown-item" href="/change">CHANGE PASSWORD</a>
-      <a class="dropdown-item" href="/change_user">CHANGE USERNAME</a>
+  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/user_home">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/about">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="/logout">Sign Out</a>
+      </li>
+      <!--
+      <li class="nav-item">
+        <div class="dropdown ">
+          <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown">Categories</button>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="/general">General</a>
+            <a class="dropdown-item" href="/sports">Sports</a>
+            <a class="dropdown-item" href="/entertainment">Entertainment</a>
+            <a class="dropdown-item" href="/technology">Technology</a>
+            <a class="dropdown-item" href="/science">Science</a>
+
           </div>
+        </div>
+      </li>
+      -->
+      <li class="nav-item">
+          <a class="nav-link" href="/general">General</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/sports">Sports</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/entertainment">Entertainment</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/technology">Technology</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/science">Science</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="/register">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="/login">Login</a>
+        </li>
+      <li class="nav-item">
+        <div class="dropdown ">
+          <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown">Profile</button>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="/change">CHANGE PASSWORD</a>
+            <a class="dropdown-item" href="/change_user">CHANGE USERNAME</a>
           </div>
-          </li>
-        </ul>
-      </div>
-    </nav>
+        </div>
+      </li>
+    </ul>
+  </div>
+</nav>
