--- a/myApp/templates/includes/_navbar_user.html
+++ b/myApp/templates/includes/_navbar_user.html
@@ -46,6 +46,9 @@
           <a class="nav-link" href="/science">Science</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/search">Search</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link disabled" href="/register">Register</a>
         </li>
         <li class="nav-item">
