--- a/myApp/templates/login.html
+++ b/myApp/templates/login.html
@@ -1,5 +1,6 @@
 {% extends 'layout.html' %}
 {% block body %}
+<div style="margin: 20px;background-color: white;padding: 20px; opacity: 0.8; color:black;">
 	<h1>LOGIN</h1>
 	<form method='POST' action="">
 		<div class="form-group">
@@ -13,4 +14,5 @@
 		</div>
 		<p><input type="submit" class="btn btn-primary" value="Submit"></p>
 	</form>
+</div>
 {% endblock %}
