--- a/myApp/templates/home.html
+++ b/myApp/templates/home.html
@@ -1,11 +1,124 @@
 {% extends 'layout.html' %}
 {% block body %}
-	<div class="jumbotron text-center">
+	<div class="jumbotron text-center" style="margin: 20px;">
 		<h1>Welcome to NEWS APP</h1>
 		<p>Created by Darth and Leonardo</p>
-	</div>
-	<div class="jumbotron text-center">
-	<img src="map.jpg">
-		<p>1st Nes</p>
-	</div>
+	</div>  
+ <!-- <div class="container"> -->
+    <div class="row">
+      <div class="col s1">
+				  <div class="row">
+							    <div class="col s12 m7">
+							      <div class="card">
+							        <div class="card-image">
+							          <img src="./../static/stock.jpg">
+							        </div>
+							        <div class="card-content">
+							          <p>I am a very simple card. I am good at containing small bits of information.
+							          I am convenient because I require little markup to use effectively.</p>
+							        </div>
+							        <div class="card-action">
+							          <a href="#">This is a link</a>
+							        </div>
+							      </div>
+							    </div>
+				  </div>
+      </div>
+      <div class="col s1">
+      	 <div class="row">
+							    <div class="col s12 m7">
+							      <div class="card">
+							        <div class="card-image">
+							          <img src="./../static/stock.jpg">
+							        </div>
+							        <div class="card-content">
+							          <p>I am a very simple card. I am good at containing small bits of information.
+							          I am convenient because I require little markup to use effectively.</p>
+							        </div>
+							        <div class="card-action">
+							          <a href="#">This is a link</a>
+							        </div>
+							      </div>
+							    </div>
+				  </div>
+      </div>
+      	
+      <div class="col s1">
+      	 <div class="row">
+							    <div class="col s12 m7">
+							      <div class="card">
+							        <div class="card-image">
+							          <img src="./../static/stock.jpg">
+							        </div>
+							        <div class="card-content">
+							          <p>I am a very simple card. I am good at containing small bits of information.
+							          I am convenient because I require little markup to use effectively.</p>
+							        </div>
+							        <div class="card-action">
+							          <a href="#">This is a link</a>
+							        </div>
+							      </div>
+							    </div>
+				  </div>
+      </div>
+      </div>
+      <div class="row">
+      <div class="col s1">
+				  <div class="row">
+							    <div class="col s12 m7">
+							      <div class="card">
+							        <div class="card-image">
+							          <img src="./../static/stock.jpg">
+							        </div>
+							        <div class="card-content">
+							          <p>I am a very simple card. I am good at containing small bits of information.
+							          I am convenient because I require little markup to use effectively.</p>
+							        </div>
+							        <div class="card-action">
+							          <a href="#">This is a link</a>
+							        </div>
+							      </div>
+							    </div>
+				  </div>
+      </div>
+      <div class="col s1">
+      	 <div class="row">
+							    <div class="col s12 m7">
+							      <div class="card">
+							        <div class="card-image">
+							          <img src="./../static/stock.jpg">
+							        </div>
+							        <div class="card-content">
+							          <p>I am a very simple card. I am good at containing small bits of information.
+							          I am convenient because I require little markup to use effectively.</p>
+							        </div>
+							        <div class="card-action">
+							          <a href="#">This is a link</a>
+							        </div>
+							      </div>
+							    </div>
+				  </div>
+      </div>
+      	
+      <div class="col s1">
+      	 <div class="row">
+							    <div class="col s12 m7">
+							      <div class="card">
+							        <div class="card-image">
+							          <img src="./../static/stock.jpg">
+							        </div>
+							        <div class="card-content">
+							          <p>I am a very simple card. I am good at containing small bits of information.
+							          I am convenient because I require little markup to use effectively.</p>
+							        </div>
+							        <div class="card-action">
+							          <a href="#">This is a link</a>
+							        </div>
+							      </div>
+							    </div>
+				  </div>
+      </div>
+      </div>
+   <!--  </div> -->
+
 {% endblock %}
