--- a/myApp/templates/layout_user.html
+++ b/myApp/templates/layout_user.html
@@ -4,6 +4,12 @@
 	<title>MyApp</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
+<style type="text/css">
+body
+{
+	background: url("../static/map.jpg")
+}
+</style>
 <body>
 	{% include 'includes/_navbar_user.html' %}
 	
