--- a/myApp/templates/search.html
+++ b/myApp/templates/search.html
@@ -1,12 +1,23 @@
 {% extends 'layout.html' %}
 {% block body %}
-	<h1>SEARCH</h1>
-	<form method='POST' action="">
-		<div class="form-group">
-			<label>KEYWORD</label>
-			<input type="text" name="KEYWORD" class="form-control" value="{{request.form.keyword}}">
-		</div>
-		
-		<p><input type="submit" class="btn btn-primary" value="Submit"></p>
-	</form>
+<h1>SEARCH</h1>
+<form method='POST' action="">
+	<div class="form-group">
+		<label>KEYWORD</label>
+ 	<input name="keyword" type="text" class = "form-control">
+	<!--	<input type="text" name="keyword" class="form-control" value="{{request.form.keyword}}"> -->
+	</div>
+
+	<p><input type="submit" class="btn btn-primary" value="Submit"></p>
+	{% include 'includes/_messages.html' %}
+</form>
+<!-- {% with messages = get_flashed_messages() %}
+{% if messages %}
+<ul class=flashes>
+	{% for message in messages %}
+	<li>{{ message }}</li>
+	{% endfor %}
+</ul>
+{% endif %}
+{% endwith %} -->
 {% endblock %}
