--- a/myApp/templates/business_user.html
+++ b/myApp/templates/business_user.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends 'layout_user.html' %}
 {% block body %}
   {% for news_row in business|batch(2) %}
 <div class="row">
