--- a/myApp/templates/general_user.html
+++ b/myApp/templates/general_user.html
@@ -1,6 +1,6 @@
-{% extends 'layout.html' %}
+{% extends 'layout_user.html' %}
 {% block body %}
-  {% for news_row in business|batch(2) %}
+  {% for news_row in general|batch(2) %}
 <div class="row">
   {%for news in news_row%}
   <div class="col s1">
