--- a/myApp/templates/includes/_navbar.html
+++ b/myApp/templates/includes/_navbar.html
@@ -1,4 +1,4 @@
-   <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<!--    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -12,21 +12,6 @@
         <li class="nav-item">
           <a class="nav-link" href="/about">About</a>
         </li>
-        <!--
-        <li class="nav-item">
-          <div class="dropdown ">
-            <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown">Categories</button>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="/general">General</a>
-              <a class="dropdown-item" href="/sports">Sports</a>
-              <a class="dropdown-item" href="/entertainment">Entertainment</a>
-              <a class="dropdown-item" href="/technology">Technology</a>
-              <a class="dropdown-item" href="/science">Science</a>
-
-            </div>
-          </div>
-        </li>
-        -->
         <li class="nav-item">
           <a class="nav-link" href="/general">General</a>
         </li>
@@ -59,26 +44,29 @@
         </li>
       </ul>
     </div>
-  </nav>
-<!--  <script>
-  var elem = document.querySelector('.dropdown-trigger');
-  var instance = M.Dropdown.init(elem, options);
-  </script> -->
-    <!-- Dropdown Structure -->
-<!-- <ul id="dropdown1" class="dropdown-content">
-  <li><a href="#! ">one</a></li>
-  <li><a href="#!">two</a></li>
-  <li class="divider"></li>
-  <li><a href="#!">three</a></li>
-</ul>
-<nav>
-  <div class="nav-wrapper">
-    <a href="#!" class="brand-logo">Logo</a>
-    <ul class="right hide-on-med-and-down">
-      <li><a href="sass.html">Sass</a></li>
-      <li><a href="badges.html">Components</a></li>
-      Dropdown Trigger
-      <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
-    </ul>
-  </div>
-</nav>-->       
+  </nav> -->
+  <p style="margin: 0px;text-align: right;width: inline;background-color: black;color: grey;font-size: 60px;"><i>the</i> KHABAR</p>
+     <p style="margin:0px; text-align: right;color: white;width: inline;background-color: black"><b><a href="#" data-target="slide-out" class="sidenav-trigger nav-link disabled">MENU</a></b></p>
+
+  <ul id="slide-out" class="sidenav" style="background-color: white;">
+    <li><div class="user-view">
+      <div class="background">
+        <img src="static/map2.jpg">
+      </div>
+      <p style="font-size: 40px"><b>THE KHABAR</b></p>
+    </div></li>
+    <li><a href="/">Home</a></li>
+    <li><a href="/about">About</a></li>
+    <li><a href="/register">Register</a></li>
+    <li><a href="/login">Login</a></li>
+    <li><a href="/search">Search</a></li>
+    <li><div class="divider"></div></li>
+    <li><a class="subheader">Categories</a></li>
+    <li><a href="/general">General</a></li>
+    <li><a href="/sports">Sports</a></li>
+    <li><a href="/entertainment">Entertainment</a></li>
+    <li><a href="/science">Science</a></li>
+    <li><a href="/business">Business</a></li>
+    <li><a href="/health">Health</a></li>
+ </ul>
+ 
