--- a/myApp/templates/logout.html
+++ b/myApp/templates/logout.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block body %}
-	<div class="jumbotron text-center">
+	<div class="jumbotron text-center" style="margin: 10px; padding: 10px">
 		<h1 style="color: red;text-align: center">LOGGED OUT</h1>
 		</div>
 {% endblock %}
