--- a/myApp/templates/results.html
+++ b/myApp/templates/results.html
@@ -1,9 +1,14 @@
 {% extends 'layout.html' %}
 {% block body %}
-	<h1>Search results</h1>
-	<h2>Here are the articles with keyword "{{keyword}}"</h2>
-	{% for news in results %}
-	<div class="row">
+<div class="jumbotron text-center" style="margin:20px; padding: 10px;">
+	<h4 style="text-align: center;"><u>Search Results</u></p>
+	<p>Here are the articles with keyword "{{keyword}}"</p>
+</div>
+	{% for news_row in results|batch(2) %}
+<div class="row">
+  {%for news in news_row%}
+  <div class="col s1">
+  <div class="row">
     <div class="col s12 m7">
       <div class="card">
         <div class="card-image">
@@ -12,15 +17,18 @@
         </div>
         <div class="card-content">
           <p>
-          	{{news['summary']}}
+            {{news['summary']}}
           </p>
         </div>
         <div class="card-action">
-          <a href="#">This is a link</a>
+          <a href="{{news['url']}}">This is a link</a>
         </div>
       </div>
     </div>
   </div>
+</div>
+{%endfor%}
+</div>
 {% endfor %}
 
 {% endblock %}
