--- a/myApp/templates/search_user.html
+++ b/myApp/templates/search_user.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends 'layout_user.html' %}
 {% block body %}
 <div style="margin: 20px;background-color: white;padding: 20px; opacity: 0.8; color:black;">
 <h1>SEARCH</h1>
