--- a/myApp/templates/entertainment.html
+++ b/myApp/templates/entertainment.html
@@ -1,6 +1,9 @@
 {% extends 'layout.html' %}
 {% block body %}
-	{% for news in entertainment %}
+	{% for news_row in entertainment|batch(2) %}
+<div class="row">
+  {%for news in news_row%}
+  <div class="col s1">
 	<div class="row">
     <div class="col s12 m7">
       <div class="card">
@@ -14,10 +17,13 @@
           </p>
         </div>
         <div class="card-action">
-          <a href="#">This is a link</a>
+          <a href="{{news['url']}}">This is a link</a>
         </div>
       </div>
     </div>
   </div>
+</div>
+{%endfor%}
+</div>
 {% endfor %}
 {% endblock %}
