--- a/myApp/templates/includes/_navbar_user.html
+++ b/myApp/templates/includes/_navbar_user.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<!-- <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <a class="navbar-brand" href="#">{{name}}</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -15,7 +15,7 @@
       <li class="nav-item">
         <a class="nav-link disabled" href="/logout">Sign Out</a>
       </li>
-      <!--
+      
       <li class="nav-item">
         <div class="dropdown ">
           <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown">Categories</button>
@@ -29,7 +29,7 @@
           </div>
         </div>
       </li>
-      -->
+      
       <li class="nav-item">
           <a class="nav-link" href="/general">General</a>
         </li>
@@ -54,12 +54,6 @@
         <li class="nav-item">
           <a class="nav-link" href="/search">Search</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="/register">Register</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="/login">Login</a>
-        </li>
       <li class="nav-item">
         <div class="dropdown ">
           <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown">Profile</button>
@@ -72,3 +66,31 @@
     </ul>
   </div>
 </nav>
+ -->
+ <p style="margin: 0px;text-align: right;width: inline;background-color: black;color: grey;font-size: 60px;"><i>the</i> KHABAR</p>
+     <p style="text-align: right;color: white;width: inline;background-color: black"><b><a href="#" data-target="slide-out" class="sidenav-trigger nav-link disabled">MENU</a></b></p>
+
+  <ul id="slide-out" class="sidenav" style="background-color: white;">
+    <li><div class="user-view">
+      <div class="background">
+        <img src="static/map2.jpg">
+      </div>
+      <p style="font-size: 40px"><b>THE KHABAR</b></p>
+      <p style="font-size: 25px"><b>Hey, {{name}}!</b></p>
+    </div></li>
+    <li><a href="/user_home">Home</a></li>
+    <li><a href="/about">About</a></li>
+    <li><a href="/logout">Logout</a></li>
+    <li><a href="/change_user">Change Username</a></li>
+    <li><a href="/change">Change Password</a></li>
+    <li><a href="/search">Search</a></li>
+    <li><div class="divider"></div></li>
+    <li><a class="subheader">Categories</a></li>
+    <li><a href="/general">General</a></li>
+    <li><a href="/sports">Sports</a></li>
+    <li><a href="/entertainment">Entertainment</a></li>
+    <li><a href="/science">Science</a></li>
+    <li><a href="/business">Business</a></li>
+    <li><a href="/health">Health</a></li>
+ </ul>
+ 
