--- a/myApp/templates/layout.html
+++ b/myApp/templates/layout.html
@@ -12,14 +12,17 @@ body
 }
 </style>
 <body >
-	{% include 'includes/_navbar.html' %}
-	<div class="container">
+	{% include 'includes/_navbar.html' %}	
+	<!-- <div class="container"> -->
 		{% block body %}
 		{% endblock %}
-	</div>
+	<!-- </div> -->
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
 	</script> 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-	<script type ="text/javascript">   M.AutoInit();</script>
+	<script type ="text/javascript"> 
+	 var instance = M.Carousel.init({
+    fullWidth: true});  
+M.AutoInit();</script>
 </body>
 </html>
