--- a/myApp/templates/result_user.html
+++ b/myApp/templates/result_user.html
@@ -1,6 +1,10 @@
-{% extends 'layout.html' %}
+{% extends 'layout_user.html' %}
 {% block body %}
-  {% for news_row in business|batch(2) %}
+<div class="jumbotron text-center" style="margin:20px; padding: 10px;">
+	<h4 style="text-align: center;"><u>Search Results</u></p>
+	<p>Here are the articles with keyword "{{keyword}}"</p>
+</div>
+	{% for news_row in results|batch(2) %}
 <div class="row">
   {%for news in news_row%}
   <div class="col s1">
@@ -26,4 +30,5 @@
 {%endfor%}
 </div>
 {% endfor %}
+
 {% endblock %}
