--- a/myApp/templates/technology.html
+++ b/myApp/templates/technology.html
@@ -1,7 +1,10 @@
 {% extends 'layout.html' %}
 {% block body %}
-	{% for news in technology %}
-	<div class="row">
+  {% for news_row in technology|batch(2) %}
+<div class="row">
+  {%for news in news_row%}
+  <div class="col s1">
+  <div class="row">
     <div class="col s12 m7">
       <div class="card">
         <div class="card-image">
@@ -10,14 +13,17 @@
         </div>
         <div class="card-content">
           <p>
-          	{{news['summary']}}
+            {{news['summary']}}
           </p>
         </div>
         <div class="card-action">
-          <a href="#">This is a link</a>
+          <a href="{{news['url']}}">This is a link</a>
         </div>
       </div>
     </div>
   </div>
+</div>
+{%endfor%}
+</div>
 {% endfor %}
 {% endblock %}
