like button made, comment section work started in sports_user

--- a/myApp/templates/business.html
+++ b/myApp/templates/business.html
@@ -8,7 +8,8 @@
     <div class="col s12 m7">
       <div class="card">
         <div class="card-image">
-          <img src="{{news['image']}}">
+          <img src="{{news['image']}}"
+          onerror="this.src='https://opportunitygroup.ca/wp-content/uploads/2017/06/Business.jpg';">
           <span class="card-title">{{news['title']}}</span>
         </div>
         <div class="card-content">
