--- a/myApp/templates/sports.html
+++ b/myApp/templates/sports.html
@@ -9,7 +9,8 @@
     <div class="col s12 m7">
       <div class="card">
         <div class="card-image">
-          <img src="{{news['image']}}">
+          <img src="{{news['image']}}"
+          onerror="this.onerror=null;this.src='https://i0.wp.com/www.insidesport.co/wp-content/uploads/2017/05/Leed-Story-5.jpg?fit=1068%2C713&ssl=1';">
           <span class="card-title">{{news['title']}}</span>
         </div>
         <div class="card-content">
