--- a/myApp/templates/entertainment.html
+++ b/myApp/templates/entertainment.html
@@ -8,7 +8,9 @@
     <div class="col s12 m7">
       <div class="card">
         <div class="card-image">
-          <img src="{{news['image']}}">
+          <img src="{{news['image']}}"
+          onerror="this.src='http://www.partners-in-harvest.org/wp-content/uploads/2017/12/p1500669900108.jpg';"
+          >
           <span class="card-title">{{news['title']}}</span>
         </div>
         <div class="card-content">
