--- a/myApp/templates/general.html
+++ b/myApp/templates/general.html
@@ -8,7 +8,9 @@
     <div class="col s12 m7">
       <div class="card">
         <div class="card-image">
-          <img src="{{news['image']}}">
+          <img src="{{news['image']}}"
+          onerror="this.src='https://upload.wikimedia.org/wikipedia/en/thumb/4/41/Flag_of_India.svg/1200px-Flag_of_India.svg.png';"
+          >
           <span class="card-title">{{news['title']}}</span>
         </div>
         <div class="card-content">
