--- a/myApp/templates/general_user.html
+++ b/myApp/templates/general_user.html
@@ -8,14 +8,33 @@
     <div class="col s12 m7">
       <div class="card">
         <div class="card-image">
-          <img src="{{news['image']}}">
-          <span class="card-title">{{news['title']}}</span>
-        </div>
-        <div class="card-content">
-          <p>
+          <img src="{{news['image']}}" 
+          onerror="this.src='https://upload.wikimedia.org/wikipedia/en/thumb/4/41/Flag_of_India.svg/1200px-Flag_of_India.svg.png';">
+          <form method = "POST", action="">
+              <input type = "text" name = "title" value = "{{news.title}}" style="display: none">
+              
+              <button class="btn-floating halfway-fab waves-effect waves-light blue" type="submit" name="action">
+                <i class="material-icons">thumb_up</i>
+              </button>
+              
+              
+              
+            </form>
+          </div>
+          <div class="card-content">
+            <p>
+              <span class="card-title"><u>{{news['title']}}</u></span>
+              <b>
+              {% for i in likes  %}
+              {%- if news.title in i.values() %}
+              {{i['likes']}} people liked it.
+              {{break}}
+              {% endif %}
+              {% endfor %}
+              </b>
+            </p>
             {{news['summary']}}
-          </p>
-        </div>
+          </div>
         <div class="card-action">
           <a href="{{news['url']}}">This is a link</a>
         </div>
