--- a/myApp/templates/health.html
+++ b/myApp/templates/health.html
@@ -8,7 +8,9 @@
     <div class="col s12 m7">
       <div class="card">
         <div class="card-image">
-          <img src="{{news['image']}}">
+          <img src="{{news['image']}}"
+          onerror="this.src='http://streamafrica.com/wp-content/uploads/2014/06/Heart-Health.jpg';"
+          >
           <span class="card-title">{{news['title']}}</span>
         </div>
         <div class="card-content">
