--- a/myApp/templates/layout_user.html
+++ b/myApp/templates/layout_user.html
@@ -3,23 +3,25 @@
 <head>
 	<title>MyApp</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
 </head>
 <style type="text/css">
-body
-{
-	background: url("../static/map.jpg")
-}
+	body
+	{
+		background: url("../static/map.jpg")
+	}
 </style>
 <body>
 	{% include 'includes/_navbar_user.html' %}
 	
 	<div class="container">
-	{% block body %}
-	{% endblock %}</div>
-	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
-	</script> 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-	<script type ="text/javascript">   M.AutoInit();</script>
-</body>
-</html>
+		{% block body %}
+		{% endblock %}</div>
+		<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
+		</script> 
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+		<script type ="text/javascript">   M.AutoInit();</script>
+	</body>
+	</html>
