--- a/myApp/templates/sports_user.html
+++ b/myApp/templates/sports_user.html
@@ -1,29 +1,71 @@
 {% extends 'layout_user.html' %}
 {% block body %}
-  {% for news_row in sports|batch(2) %}
+{% for news_row in sports|batch(2) %}
 <div class="row">
   {%for news in news_row%}
   <div class="col s1">
-  <div class="row">
-    <div class="col s12 m7">
-      <div class="card">
-        <div class="card-image">
-          <img src="{{news['image']}}">
-          <span class="card-title">{{news['title']}}</span>
-        </div>
-        <div class="card-content">
-          <p>
-            {{news['summary']}}
-          </p>
-        </div>
-        <div class="card-action">
-          <a href="{{news['url']}}">This is a link</a>
+    <div class="row">
+      <div class="col s12 m7">
+        <div class="card">
+          <div class="card-image">
+            <img src="{{news['image']}}" alt = "{{news.description}}" 
+            onerror="this.onerror=null;this.src='https://i0.wp.com/www.insidesport.co/wp-content/uploads/2017/05/Leed-Story-5.jpg?fit=1068%2C713&ssl=1';">
+            <form method = "POST", action="">
+              <input type = "text" name = "title" value = "{{news.title}}" style="display: none">
+              
+              <button class="btn-floating halfway-fab waves-effect waves-light blue" type="submit" name="action">
+                <i class="material-icons">thumb_up</i>
+              </button>
+              
+              
+              
+            </form>
+          </div>
+          <div class="card-content">
+            <p>
+              <span class="card-title"><u>{{news['title']}}</u></span>
+              <b>
+                {% for i in likes  %}
+                {%- if news.title in i.values() %}
+                {{i['likes']}} people liked it.
+                {{break}}
+                {% endif %}
+                {% endfor %}
+              </b>
+            </p>
+            {{news['description']}}
+          </div>
+          <div class="card-action">
+            <a href="{{news['url']}} " target="_blank">This is a link</a>
+            <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">{{news['title']}}<i class="material-icons right">close</i></span>
+              <p>{{news['summary']}}</p>
+            </div>
+          
+
+
+
+
+
+          <button data-target="modal1" class="btn modal-trigger">Read more</button>
+          <div id="modal1" class="modal modal-fixed-footer">
+            <div class="modal-content">
+              <h4>{{news['title']}}</h4>
+              <p>{{news['summary']}}</p>
+            </div>
+            <div class="modal-footer">
+              <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a>
+            </div>
+          </div>
+
+          <script type="text/javascript">var elem = document.querySelector('.modal');
+            var instance = M.Modal.init(elem, options);</script>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-{%endfor%}
+  {%endfor%}
 </div>
 {% endfor %}
 {% endblock %}
