--- a/myApp/templates/technology.html
+++ b/myApp/templates/technology.html
@@ -8,7 +8,8 @@
     <div class="col s12 m7">
       <div class="card">
         <div class="card-image">
-          <img src="{{news['image']}}">
+          <img src="{{news['image']}}"
+          onerror="this.src='https://www.dailynation.news/wp-content/uploads/2017/10/technology.jpg';">
           <span class="card-title">{{news['title']}}</span>
         </div>
         <div class="card-content">
