--- a/myApp/templates/layout.html
+++ b/myApp/templates/layout.html
@@ -15,8 +15,9 @@ body
 <body >
 	{% include 'includes/_navbar.html' %}	
 	<!-- <div class="container"> -->
+		<div class="container">
 		{% block body %}
-		{% endblock %}
+		{% endblock %}</div>
 	<!-- </div> -->
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
 	</script> 
