--- a/myApp/templates/sports_user.html
+++ b/myApp/templates/sports_user.html
@@ -1,5 +1,6 @@
 {% extends 'layout_user.html' %}
 {% block body %}
+
 {% for news_row in sports|batch(2) %}
 <div class="row">
   {%for news in news_row%}
@@ -8,64 +9,78 @@
       <div class="col s12 m7">
         <div class="card">
           <div class="card-image">
-            <img src="{{news['image']}}" alt = "{{news.description}}" 
+            <img src="{{news['image']}}"
             onerror="this.onerror=null;this.src='https://i0.wp.com/www.insidesport.co/wp-content/uploads/2017/05/Leed-Story-5.jpg?fit=1068%2C713&ssl=1';">
+
             <form method = "POST", action="">
               <input type = "text" name = "title" value = "{{news.title}}" style="display: none">
               
-              <button class="btn-floating halfway-fab waves-effect waves-light blue" type="submit" name="action">
+              <button class="btn-floating halfway-fab waves-effect waves-light blue" type="submit" name="Like" value = "Like">
                 <i class="material-icons">thumb_up</i>
-              </button>
-              
-              
+              </button>       
               
             </form>
+            
           </div>
           <div class="card-content">
+            <span class="card-title">{{news['title']}}</span>
             <p>
-              <span class="card-title"><u>{{news['title']}}</u></span>
+
               <b>
                 {% for i in likes  %}
                 {%- if news.title in i.values() %}
                 {{i['likes']}} people liked it.
-                {{break}}
                 {% endif %}
                 {% endfor %}
-              </b>
+              </b> 
             </p>
-            {{news['description']}}
+            <p>
+              {{news['description']}}
+            </p>
           </div>
           <div class="card-action">
-            <a href="{{news['url']}} " target="_blank">This is a link</a>
-            <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">{{news['title']}}<i class="material-icons right">close</i></span>
-              <p>{{news['summary']}}</p>
-            </div>
-          
+            <a href="{{news['url']}}">Go To Site</a>
+            <button data-target="modal{{sports.index(news)}}" class="btn modal-trigger">Read more</button>
+            <div id="modal{{sports.index(news)}}" class="modal modal-fixed-footer">
+              <div class="modal-content">
+                <h4>{{news['title']}}</h4>
+                <p>{{news['summary']}}</p>
+                <form method = 'POST' action="">
+                  <input type = "text" name = "username" value = "{{un}}" style="display: none">
+                  <input type = "text" name = "title" value = "{{news['title']}}" style="display: none">
+                  <label style="color: black; font-size: 15px;">Comment</label>
+                  <input type="text" name="comment" >
+                  <button class="btn-floating waves-effect waves-light blue" type="submit" name="Comments" >
+                    <i class="material-icons">create</i>
+                  </button>         
+                </form>
+                <ul class="collection">
+                  {% for i in views %}
+                  {%- if news['title'] in i.values() %}
+
+                  <li class="collection-item avatar">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMvm6UclGzn245GcuvQ20eJaY5nugtX7HosGOB43IqogmB_ohz" alt="" class="circle responsive-img" >
+                    <span class="title"><b><i>POSTED_BY</i></b>{{i['user']}}</span>
+                    <p>{{i['comments']}} <br>
+                   </p>
+                   <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+                 </li>
+                 {% endif %}
+                 {% endfor %}
+                 </ul>
 
 
+               </div>
+               <div class="modal-footer">
 
-
-
-          <button data-target="modal1" class="btn modal-trigger">Read more</button>
-          <div id="modal1" class="modal modal-fixed-footer">
-            <div class="modal-content">
-              <h4>{{news['title']}}</h4>
-              <p>{{news['summary']}}</p>
-            </div>
-            <div class="modal-footer">
-              <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a>
-            </div>
-          </div>
-
-          <script type="text/javascript">var elem = document.querySelector('.modal');
-            var instance = M.Modal.init(elem, options);</script>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  {%endfor%}
-</div>
-{% endfor %}
-{% endblock %}
+               </div>
+             </div>
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
+   {%endfor%}
+ </div>
+ {% endfor %}
+ {% endblock %}
