--- a/myApp/templates/general.html
+++ b/myApp/templates/general.html
@@ -25,20 +25,19 @@
               <div class="modal-content">
                 <h4>{{news['title']}}</h4>
                 <p>{{news['summary']}}</p>
-                <ul class="collection">
+                <h6><u>Comments:</u></h6>
+                <!-- <ul class="collection"> -->
                   {% for i in views %}
-                  {%- if news['title'] in i.values() %}
-
-                  <li class="collection-item avatar">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMvm6UclGzn245GcuvQ20eJaY5nugtX7HosGOB43IqogmB_ohz" alt="" class="circle responsive-img" >
-                    <span class="title"><b><i>POSTED_BY</i></b>{{i['user']}}</span>
-                    <p>{{i['comments']}} <br>
-                   </p>
-                   <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
-                 </li>
+                  {% if news['title'] == i['news'] %}
+                  <!-- <li class="collection-item avatar"> -->
+                    <div style="background-color: lightgrey;margin: 5px;padding: 5px">
+                    <p><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMvm6UclGzn245GcuvQ20eJaY5nugtX7HosGOB43IqogmB_ohz" alt="" class="circle responsive-img" width="40px" >
+                    <span class="title"><b><i>POSTED_BY: </i></b>{{i['user']}}</span></p>
+                    <p><span class="title"><b><i>COMMENT: </i></b>{{i['comments']}}</span></p></div>
+                 <!-- </li> -->
                  {% endif %}
                  {% endfor %}
-                 </ul>
+                 <!-- </ul> -->
 
 
                </div>
