--- a/myApp/templates/includes/_navbar_user.html
+++ b/myApp/templates/includes/_navbar_user.html
@@ -1,40 +1,22 @@
-<!-- <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">{{name}}</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <a class="navbar-brand">theKHABAR</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/user_home">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/about">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="/logout">Sign Out</a>
-      </li>
-      
-      <li class="nav-item">
-        <div class="dropdown ">
-          <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown">Categories</button>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="/general">General</a>
-            <a class="dropdown-item" href="/sports">Sports</a>
-            <a class="dropdown-item" href="/entertainment">Entertainment</a>
-            <a class="dropdown-item" href="/technology">Technology</a>
-            <a class="dropdown-item" href="/science">Science</a>
-
-          </div>
-        </div>
-      </li>
-      
-      <li class="nav-item">
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
           <a class="nav-link" href="/general">General</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/sports">Sports</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/business">Business</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/science">Science</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/entertainment">Entertainment</a>
@@ -43,31 +25,12 @@
           <a class="nav-link" href="/technology">Technology</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/science">Science</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/business">Business</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="/health">Health</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/search">Search</a>
-        </li>
-      <li class="nav-item">
-        <div class="dropdown ">
-          <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown">Profile</button>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="/change">CHANGE PASSWORD</a>
-            <a class="dropdown-item" href="/change_user">CHANGE USERNAME</a>
-          </div>
-        </div>
-      </li>
-    </ul>
-  </div>
-</nav>
- -->
- <p style="margin: 0px;text-align: right;width: inline;background-color: black;color: grey;font-size: 60px;"><i>the</i> KHABAR</p>
+      </ul>
+    </div>
+  </nav>
+<!--  <p style="margin: 0px;text-align: right;width: inline;background-color: black;color: grey;font-size: 60px;"><i>the</i> KHABAR</p> -->
      <p style="text-align: right;color: white;width: inline;background-color: black"><b><a href="#" data-target="slide-out" class="sidenav-trigger nav-link disabled">MENU</a></b></p>
 
   <ul id="slide-out" class="sidenav" style="background-color: white;">
@@ -84,13 +47,5 @@
     <li><a href="/change_user">Change Username</a></li>
     <li><a href="/change">Change Password</a></li>
     <li><a href="/search">Search</a></li>
-    <li><div class="divider"></div></li>
-    <li><a class="subheader">Categories</a></li>
-    <li><a href="/general">General</a></li>
-    <li><a href="/sports">Sports</a></li>
-    <li><a href="/entertainment">Entertainment</a></li>
-    <li><a href="/science">Science</a></li>
-    <li><a href="/business">Business</a></li>
-    <li><a href="/health">Health</a></li>
  </ul>
  
