--- a/myApp/templates/sports.html
+++ b/myApp/templates/sports.html
@@ -1,6 +1,5 @@
 {% extends 'layout.html' %}
 {% block body %}
-
 {% for news_row in sports|batch(2) %}
 <div class="row">
   {%for news in news_row%}
@@ -25,7 +24,7 @@
               <div class="modal-content">
                 <h4>{{news['title']}}</h4>
                 <p>{{news['summary']}}</p>
-                <ul class="collection">
+                <!-- <ul class="collection">
                   {% for i in views %}
                   {%- if news['title'] in i.values() %}
 
@@ -38,7 +37,17 @@
                  </li>
                  {% endif %}
                  {% endfor %}
-                 </ul>
+                 </ul> -->
+                 {% for i in views %}
+                  {% if news['title'] == i['news'] %}
+                  <!-- <li class="collection-item avatar"> -->
+                    <div style="background-color: lightgrey;margin: 5px;padding: 5px">
+                    <p><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMvm6UclGzn245GcuvQ20eJaY5nugtX7HosGOB43IqogmB_ohz" alt="" class="circle responsive-img" width="40px" >
+                    <span class="title"><b><i>POSTED_BY: </i></b>{{i['user']}}</span></p>
+                    <p><span class="title"><b><i>COMMENT: </i></b>{{i['comments']}}</span></p></div>
+                 <!-- </li> -->
+                 {% endif %}
+                 {% endfor %}
 
 
                </div>
