--- a/myApp/templates/layout_user.html
+++ b/myApp/templates/layout_user.html
@@ -22,6 +22,7 @@
 		<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
 		</script> 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script type ="text/javascript">   M.AutoInit();</script>
 	</body>
 	</html>
