--- a/myApp/templates/result_user.html
+++ b/myApp/templates/result_user.html
@@ -15,12 +15,10 @@
           <img src="{{news['image']}}">
           <form method = "POST", action="">
               <input type = "text" name = "title" value = "{{news.title}}" style="display: none">
-              
-              <button class="btn-floating halfway-fab waves-effect waves-light blue" type="submit" name="action">
+              <input type = "text" name = "username" value = "{{un}}" id = "username" style="display: none">
+              <button class="btn-floating halfway-fab waves-effect waves-light blue" type="submit" name="Like" value = "Like" action ="Like">
                 <i class="material-icons">thumb_up</i>
-              </button>
-              
-              
+              </button>       
               
             </form>
           </div>
@@ -30,7 +28,7 @@
               <b>
               {% for i in likes  %}
               {%- if news.title in i.values() %}
-              {{i['likes']}} people liked it.
+              {{i['count(likes)']}} people liked it.
               {{break}}
               {% endif %}
               {% endfor %}
