--- a/myApp/templates/sports_user.html
+++ b/myApp/templates/sports_user.html
@@ -14,8 +14,8 @@
 
             <form method = "POST", action="">
               <input type = "text" name = "title" value = "{{news.title}}" style="display: none">
-              
-              <button class="btn-floating halfway-fab waves-effect waves-light blue" type="submit" name="Like" value = "Like">
+              <input type = "text" name = "username" value = "{{un}}" id = "username" style="display: none">
+              <button class="btn-floating halfway-fab waves-effect waves-light blue" type="submit" name="Like" value = "Like" action ="Like">
                 <i class="material-icons">thumb_up</i>
               </button>       
               
@@ -29,7 +29,7 @@
               <b>
                 {% for i in likes  %}
                 {%- if news.title in i.values() %}
-                {{i['likes']}} people liked it.
+                {{i['count(likes)']}} people liked it.
                 {% endif %}
                 {% endfor %}
               </b> 
