About page updated

--- a/myApp/templates/about.html
+++ b/myApp/templates/about.html
@@ -1,7 +1,45 @@
 {% extends 'layout.html' %}
 {% block body %}
 <div class="jumbotron text-center">
-	<h1>About Me</h1>
-	<p>Hey It is me</p>
+	<h2>News App</h2>
+	<p>This is part of our ITWS-2 final project. The source code link and the creators are provided below.This was made using Flask and Mysql for backend and Materialize CSS and Bootstrap for frontend. Contact the creators for any doubts/suggestions</p>
+
+  <div class="row">
+    <div class="col s12 m7">
+      <div class="card">
+        <div class="card-image">
+          <img src="https://scontent.fhyd6-1.fna.fbcdn.net/v/t1.0-9/22007460_1656086581109383_1742230351635641127_n.jpg?_nc_cat=0&oh=7e1cda9ba93b379dfbed585f36d9ba3c&oe=5B699A07">
+          
+        </div>
+        <div class="card-content">
+        <span class="card-title">Pulkit Gera</span>
+          <p>First year student IIIT H. </p>
+        </div>
+        <div class="card-action">
+          <a href="https://www.facebook.com/pulkitgbs">Facebook</a>
+        </div>
+      </div>
+    </div>
+    <div class="col s12 m7">
+      <div class="card">
+        <div class="card-image">
+          <img src="https://scontent.fhyd6-1.fna.fbcdn.net/v/t1.0-9/19030178_314210922363593_3776731201636836727_n.jpg?_nc_cat=0&oh=4814120f8d21c4ad937947e24eba2445&oe=5B736B9A">
+          
+        </div>
+        <div class="card-content">
+        <span class="card-title">Neel Trivedi</span>
+          <p>First year student IIIT H.</p>
+        </div>
+        <div class="card-action">
+          <a href="https://www.facebook.com/profile.php?id=100013240630282">Facebook</a>
+        </div>
+      </div>
+    </div>
+  </div>
+        <h2>  Source Code for the project </h2>
+        <a  >   
+        <a href="https://gitlab.com/darthgera123/NSA" target="_blank" class="waves-effect waves-light btn">
+        <i class="material-icons left">add</i>CODE</a>
 </div>
+
 {% endblock %}
