--- a/myApp/templates/includes/_navbar.html
+++ b/myApp/templates/includes/_navbar.html
@@ -41,9 +41,10 @@
       <p style="font-size: 40px"><b>THE KHABAR</b></p>
     </div></li>
     <li><a href="/">Home</a></li>
-    <li><a href="/about">About</a></li>
+    
     <li><a href="/register">Register</a></li>
     <li><a href="/login">Login</a></li>
     <li><a href="/search">Search</a></li>
+    <li><a href="/credits">Credits</a></li>
  </ul>
  
