--- a/myApp/templates/includes/_navbar_user.html
+++ b/myApp/templates/includes/_navbar_user.html
@@ -42,10 +42,11 @@
       <p style="font-size: 25px"><b>Hey, {{name}}!</b></p>
     </div></li>
     <li><a href="/user_home">Home</a></li>
-    <li><a href="/about">About</a></li>
+    
     <li><a href="/logout">Logout</a></li>
     <li><a href="/change_user">Change Username</a></li>
     <li><a href="/change">Change Password</a></li>
     <li><a href="/search">Search</a></li>
+    <li><a href="/credits">Credits</a></li>
  </ul>
  
