home page changed

--- a/myApp/templates/entertainment.html
+++ b/myApp/templates/entertainment.html
@@ -1,5 +1,6 @@
 {% extends 'layout.html' %}
 {% block body %}
+<div style="background-color: black; padding:20px">
 	{% for news_row in entertainment|batch(2) %}
 <div class="row">
   {%for news in news_row%}
@@ -64,4 +65,5 @@
 {%endfor%}
 </div>
 {% endfor %}
+</div>
 {% endblock %}
