--- a/myApp/templates/includes/_navbar_user.html
+++ b/myApp/templates/includes/_navbar_user.html
@@ -31,7 +31,7 @@
     </div>
   </nav>
 <!--  <p style="margin: 0px;text-align: right;width: inline;background-color: black;color: grey;font-size: 60px;"><i>the</i> KHABAR</p> -->
-     <p style="text-align: right;color: white;width: inline;background-color: black"><b><a href="#" data-target="slide-out" class="sidenav-trigger nav-link disabled">MENU</a></b></p>
+     <p style="text-align: right;color: white;width: inline;background-color: black ;margin-bottom:10px"><b><a href="#" data-target="slide-out" class="sidenav-trigger nav-link disabled">MENU</a></b></p>
 
   <ul id="slide-out" class="sidenav" style="background-color: white;">
     <li><div class="user-view">
