--- a/myApp/templates/sports_user.html
+++ b/myApp/templates/sports_user.html
@@ -1,6 +1,6 @@
 {% extends 'layout_user.html' %}
 {% block body %}
-
+<div style="background-color: black; padding:20px">
 {% for news_row in sports|batch(2) %}
 <div class="row">
   {%for news in news_row%}
@@ -93,4 +93,5 @@
    {%endfor%}
  </div>
  {% endfor %}
+</div>
  {% endblock %}
