--- a/myApp/templates/business.html
+++ b/myApp/templates/business.html
@@ -1,5 +1,6 @@
 {% extends 'layout.html' %}
 {% block body %}
+<div style="background-color: black; padding:20px">
   {% for news_row in business|batch(2) %}
 <div class="row">
   {%for news in news_row%}
@@ -63,4 +64,5 @@
 {%endfor%}
 </div>
 {% endfor %}
+</div>
 {% endblock %}
