--- a/myApp/templates/general.html
+++ b/myApp/templates/general.html
@@ -1,5 +1,6 @@
 {% extends 'layout.html' %}
 {% block body %}
+<div style="background-color: black; padding:20px">
   {% for news_row in general|batch(2) %}
 <div class="row">
   {%for news in news_row%}
@@ -53,4 +54,5 @@
 {%endfor%}
 </div>
 {% endfor %}
+</div>
 {% endblock %}
