work on preferences

--- a/myApp/templates/register.html
+++ b/myApp/templates/register.html
@@ -22,34 +22,47 @@
 		</div>
 	
 		<div class="form-group"><p>PREFERENCES</p></div>
-			<p>
+			Select ANY 3 Preferences
+      <p>
       <label>
-        <input type="checkbox" class="filled-in" name="sp" />
+        <input type="checkbox" class="filled-in" name="Sports" />
         <span>Sports</span>
       </label>
     </p>
     	<p>
       <label>
-        <input type="checkbox" class="filled-in" name="en"/>
+        <input type="checkbox" class="filled-in" name="Entertainment"/>
         <span>Entertainment</span>
       </label>
     </p>
     	<p>
       <label>
-        <input type="checkbox" class="filled-in" name="ge"/>
+        <input type="checkbox" class="filled-in" name="General"/>
         <span>General</span>
       </label>
     </p>
     	<p>
       <label>
-        <input type="checkbox" class="filled-in" name="sc"/>
+        <input type="checkbox" class="filled-in" name="Science"/>
         <span>Science</span>
       </label>
     </p>
     	<p>
       <label>
-        <input type="checkbox" class="filled-in" name="te"/>
+        <input type="checkbox" class="filled-in" name="Technology"/>
         <span>Technology</span>
+      </label>
+    </p>
+    <p>
+      <label>
+        <input type="checkbox" class="filled-in" name="Business"/>
+        <span>Business</span>
+      </label>
+    </p>
+    <p>
+      <label>
+        <input type="checkbox" class="filled-in" name="Health"/>
+        <span>Health</span>
       </label>
     </p>
 		<p><input type="submit" class="btn btn-primary" value="Submit"></p>
