--- a/myApp/templates/search_user.html
+++ b/myApp/templates/search_user.html
@@ -9,7 +9,7 @@
 	<!--	<input type="text" name="keyword" class="form-control" value="{{request.form.keyword}}"> -->
 	</div>
 
-	<p><input type="submit" class="btn btn-primary" value="Submit"></p>
+	<p><input type="submit" class="btn btn-primary" value="Submit" name="search"></p>
 	{% include 'includes/_messages.html' %}
 </form>
 </div>
