--- a/myApp/templates/results.html
+++ b/myApp/templates/results.html
@@ -4,8 +4,9 @@
 	<h4 style="text-align: center;"><u>Search Results</u></p>
 	<p>Here are the articles with keyword "{{keyword}}"</p>
 </div>
+
 <div style="background-color: black; padding:20px">
-	{% for news_row in results|batch(2) %}
+{% for news_row in results|batch(2) %}
 <div class="row">
   {%for news in news_row%}
   <div class="col s1">
@@ -13,17 +14,55 @@
     <div class="col s12 m7">
       <div class="card">
         <div class="card-image">
-          <img src="{{news['image']}}">
-          <span class="card-title">{{news['title']}}</span>
+          <img src="{{news['image']}}"
+          onerror="this.onerror=null;this.src='https://i0.wp.com/www.insidesport.co/wp-content/uploads/2017/05/Leed-Story-5.jpg?fit=1068%2C713&ssl=1';">
+          
         </div>
         <div class="card-content">
+          <span class="card-title">{{news['title']}}</span>
           <p>
-            {{news['summary']}}
+            {{news['description']}}
           </p>
         </div>
         <div class="card-action">
-          <a href="{{news['url']}}">This is a link</a>
-        </div>
+            <a href="{{news['url']}}">Go To Site</a>
+            <button data-target="modal{{results.index(news)}}" class="btn modal-trigger">Read more</button>
+            <div id="modal{{results.index(news)}}" class="modal modal-fixed-footer">
+              <div class="modal-content">
+                <h4>{{news['title']}}</h4>
+                <p>{{news['summary']}}</p>
+                <!-- <ul class="collection">
+                  {% for i in views %}
+                  {%- if news['title'] in i.values() %}
+
+                  <li class="collection-item avatar">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMvm6UclGzn245GcuvQ20eJaY5nugtX7HosGOB43IqogmB_ohz" alt="" class="circle responsive-img" >
+                    <span class="title"><b><i>POSTED_BY</i></b>{{i['user']}}</span>
+                    <p>{{i['comments']}} <br>
+                   </p>
+                   <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+                 </li>
+                 {% endif %}
+                 {% endfor %}
+                 </ul> -->
+                 {% for i in views %}
+                  {% if news['title'] == i['news'] %}
+                  <!-- <li class="collection-item avatar"> -->
+                    <div style="background-color: lightgrey;margin: 5px;padding: 5px">
+                    <p><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMvm6UclGzn245GcuvQ20eJaY5nugtX7HosGOB43IqogmB_ohz" alt="" class="circle responsive-img" width="40px" >
+                    <span class="title"><b><i>POSTED_BY: </i></b>{{i['user']}}</span></p>
+                    <p><span class="title"><b><i>COMMENT: </i></b>{{i['comments']}}</span></p></div>
+                 <!-- </li> -->
+                 {% endif %}
+                 {% endfor %}
+
+
+               </div>
+               <div class="modal-footer">
+
+               </div>
+             </div>
+           </div>
       </div>
     </div>
   </div>
