--- a/myApp/templates/try_home.html
+++ b/myApp/templates/try_home.html
@@ -1,7 +1,13 @@
-{% extends 'layout_user.html' %}
+{% extends 'try.html' %}
 {% block body %}
+{% if adminloggedin %}
+{% include 'includes/_navbar_admin.html' %}
+{% else %}
+{% include 'includes/_navbar_user.html' %}
+{% endif %}
+<div class = container>
 <div style="background-color: black; padding:20px">
-{% for news_row in sports|batch(2) %}
+{% for news_row in homenews|batch(2) %}
 <div class="row">
   {%for news in news_row%}
   <div class="col s1">
@@ -15,17 +21,10 @@
             <form method = "POST", action="">
               <input type = "text" name = "title" value = "{{news.title}}" style="display: none">
               <input type = "text" name = "username" value = "{{un}}" id = "username" style="display: none">
-              {% for i in liked %}
-              {%- if name in i.values()  and %}
-              <button class="btn-floating halfway-fab waves-effect waves-light red" type="submit" name="Like" value = "Like" action ="Like">
-                <i class="material-icons">thumb_up</i>
-              </button>       
-              {% else %}
               <button class="btn-floating halfway-fab waves-effect waves-light blue" type="submit" name="Like" value = "Like" action ="Like">
                 <i class="material-icons">thumb_up</i>
-              </button>
-              {% endif %}
-              {% endfor %} 
+              </button>       
+              
             </form>
             
           </div>
@@ -47,8 +46,8 @@
           </div>
           <div class="card-action">
             <a href="{{news['url']}}">Go To Site</a>
-            <button data-target="modal{{sports.index(news)}}" class="btn modal-trigger">Read more</button>
-            <div id="modal{{sports.index(news)}}" class="modal modal-fixed-footer">
+            <button data-target="modal{{homenews.index(news)}}" class="btn modal-trigger">Read more</button>
+            <div id="modal{{homenews.index(news)}}" class="modal modal-fixed-footer">
               <div class="modal-content">
                 <h4>{{news['title']}}</h4>
                 <p>{{news['summary']}}</p>
@@ -101,4 +100,7 @@
  </div>
  {% endfor %}
 </div>
+</div>
  {% endblock %}
+}
+}
