--- a/myApp/templates/home.html
+++ b/myApp/templates/home.html
@@ -1,134 +1,10 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>theKHABAR</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-</head>
-<body>
-<div style="background-color: black;color: white;width: inline;height: 50px">
-  <h1 style="text-align: center"><b><i>the</i>&emsp;KHABAR</b></h1>
-</div>
-	 <nav class="navbar navbar-inverse">	
-  <div class="container-fluid">
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="/general">General</a></li>
-      <li><a href="/sports">Sports</a></li>
-      <li><a href="/business">Business</a></li>
-      <li><a href="/science">Scince</a></li>
-      <li><a href="/entertainment">Entertainment</a></li>
-      <li><a href="/technology">Technology</a></li>
-      <li><a href="/health">Health</a></li>
-    </ul>
-  </div>
-</nav> 
-<div class="container" style="width:70%">
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-      <li data-target="#myCarousel" data-slide-to="3"></li>
-      <li data-target="#myCarousel" data-slide-to="4"></li>
-    </ol>
-
-    <div class="carousel-inner">
-      <div class="item active">
-      	<a href="{{homenews[0]['url']}}">
-        <img src="{{homenews[0]['image']}}"  style="width:100%;">
-        <div class="carousel-caption">
-        	<div style="background-color: grey;width: inline;padding: 10px;opacity: 0.7 ">
-        	<h3 style="color:black;"><b>{{homenews[0]['title']}}</b></h3>
-        	<p style="color:black">{{homenews[0]['description']}}</p>
-        </div>
-        </div>
-    </a>
-      </div>
-
-      <div class="item">
-      	<a href="{{homenews[1]['url']}}">
-        <img src="{{homenews[1]['image']}}" style="width:100%;">
-        <div class="carousel-caption">
-        	<div style="background-color: grey;width: inline;padding: 10px;opacity: 0.7 ">
-        	<h3 style="color:black;"><b>{{homenews[1]['title']}}</b></h3>
-        	<p style="color:black">{{homenews[1]['description']}}</p>
-        </div>
-        </div>
-    </a>
-      </div>
-    
-      <div class="item">
-      	<a href="{{homenews[2]['url']}}">
-        <img src="{{homenews[2]['image']}}" style="width:100%;">
-        <div class="carousel-caption">
-        	<div style="background-color: grey;width: inline;padding: 10px;opacity: 0.7 ">
-        	<h3 style="color:black;"><b>{{homenews[2]['title']}}</b></h3>
-        	<p style="color:black">{{homenews[2]['description']}}</p>
-        </div>
-        </div>
-    </a>
-      </div>
-      <div class="item">
-      	<a href="{{homenews[3]['url']}}">
-        <img src="{{homenews[3]['image']}}" style="width:100%;">
-        <div class="carousel-caption">
-        	<div style="background-color: grey;width: inline;padding: 10px;opacity: 0.7 ">
-        	<h3 style="color:black;"><b>{{homenews[3]['title']}}</b></h3>
-        	<p style="color:black">{{homenews[3]['description']}}</p>
-        </div>
-        </div>
-    </a>
-      </div>
-      <div class="item">
-      	<a href="{{homenews[4]['url']}}">
-        <img src="{{homenews[4]['image']}}" style="width:100%;">
-        <div class="carousel-caption">
-        	<div style="background-color: grey;width: inline;padding: 10px;opacity: 0.7 ">
-        	<h3 style="color:black;"><b>{{homenews[4]['title']}}</b></h3>
-        	<p style="color:black">{{homenews[4]['description']}}</p>
-        </div>
-        </div>
-    </a>
-      </div>
-    </div>
-
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</div>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</body>
-</html>
- -->
 {% extends 'layout.html' %}
 {% block body %}
 <div class="jumbotron text-center" style="margin: 20px">
     <h1>Welcome to the KHABAR</h1>
-
+    <h3>Your one stop destination for the trending news of the day</h3>
     {% include 'includes/_messages.html' %}
-    
- <div class="tap-target teal lighten-3" data-activates="mybtn" style="z-index: 1000">
-    <div class="tap-target-content">
-      <h5>Available: 24/7</h5>
-      <p>Call us now to speak with someone about your matter.</p>
-      <a href="#!" onclick="$('.tap-target').tapTarget('close')">Dismiss</a>
-    </div>
-  </div>
-  <script type="text/javascript">
-     $(document).ready(function(){
-  $('.tap-target').tapTarget('open');
-});
-  </script>
-  </div>
+</div>
 <div style="background-color: black; padding:20px">
   {% for news_row in homenews|batch(2) %}
 <div class="row">
@@ -141,9 +17,10 @@
           <img src="{{news['image']}}"
           onerror="this.src='https://upload.wikimedia.org/wikipedia/en/thumb/4/41/Flag_of_India.svg/1200px-Flag_of_India.svg.png';"
           >
-          <span class="card-title">{{news['title']}}</span>
+          
         </div>
         <div class="card-content">
+          <span class="card-title">{{news['title']}}</span>
           <p>
             {{news['description']}}
           </p>
@@ -183,5 +60,12 @@
 {%endfor%}
 </div>
 {% endfor %}
+</div>
+<div class="jumbotron text-center" style="margin: 20px">
+    <h1>Want news that suits you ?</h1>
+    <h3><a href = "{{url_for('.login')}}"> Click here to login </a></h3><br/>
+    <h3><a href = "{{url_for('.register')}}"> Click here to register </a></h3>
+    
+    
 </div>
 {% endblock %}
