--- a/myApp/templates/result_user.html
+++ b/myApp/templates/result_user.html
@@ -1,5 +1,18 @@
-{% extends 'layout_user.html' %}
+{% extends 'layout_logged.html' %}
+{% block nav %}
+{% if adminloggedin %}
+{% include 'includes/_navbar_admin.html' %}
+{% else %}
+{% include 'includes/_navbar_user.html' %}
+{% endif %}
+
+{% endblock %}
 {% block body %}
+<div class="jumbotron text-center" style="margin:20px; padding: 10px;">
+  <h4 style="text-align: center;"><u>Search Results</u></p>
+  <p>Here are the articles with keyword "{{keyword}}"</p>
+  
+</div>
 <div style="background-color: black; padding:20px">
 {% for news_row in results|batch(2) %}
 <div class="row">
