--- a/myApp/templates/technology_user.html
+++ b/myApp/templates/technology_user.html
@@ -33,7 +33,7 @@
               {% endfor %}
               </b>
             </p>
-            {{news['summary']}}
+            {{news['description']}}
           </div>
         <div class="card-action">
             <a href="{{news['url']}}">Go To Site</a>
